[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Terrain.png" type="Texture" id=1]
[ext_resource path="res://Assets/Blocks.png" type="Texture" id=2]
[ext_resource path="res://Scripts/EditTile.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 14 )

[node name="EditTile" type="Area2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 0.117647, 0.0313726, 0.141176, 1 )
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockSprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 136, 0, 34, 34 )

[node name="TileSprite" type="Sprite" parent="."]
position = Vector2( -388, -125 )
texture = ExtResource( 1 )
offset = Vector2( 388, 125 )
region_enabled = true
region_rect = Rect2( 0, 0, 34, 34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_EditTile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_EditTile_mouse_exited"]
